# atomheart

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
src/atomheart/: __init__.py  move_factory.py  transition.py
src/atomheart/board/: __init__.py  board_chi.py  board_modification.py  board_tools.py  factory.py  iboard.py  rusty_board.py  starting_position.py  utils.py  valanga_adapter.py
src/atomheart/games/: __init__.py  _branch_key_gen.py
src/atomheart/games/checkers/: __init__.py  apply.py  bitboard.py  dynamics.py  generation.py  geometry.py  move.py  reversible.py  rules.py  state.py
src/atomheart/games/chess/: __init__.py  dynamics.py  state.py
src/atomheart/games/chess/board/: __init__.py  board_chi.py  board_modification.py  board_tools.py  factory.py  iboard.py  rusty_board.py  starting_position.py  utils.py
src/atomheart/games/chess/move/: __init__.py  imove.py  move_factory.py  rust_move.py
src/atomheart/games/integer_reduction/: __init__.py  dynamics.py  reversible.py  state.py
src/atomheart/games/morpion/: __init__.py  canonical.py  checkpoints.py  dynamics.py  state.py
src/atomheart/games/nim/: __init__.py  dynamics.py  reversible.py  state.py
src/atomheart/move/: __init__.py  imove.py  rust_move.py  utils.py
src/atomheart/utils/: color.py  logger.py
tests/: __init__.py  test_board.py  test_modifications.py  test_package_imports.py  test_step.py
tests/checkers/: test_engine.py  test_geometry.py  test_state_text.py
tests/chess/: test_board.py  test_modifications.py  test_step.py
tests/games/: __init__.py
tests/games/integer_reduction/: __init__.py  test_dynamics.py  test_reversible.py  test_state.py
tests/games/nim/: __init__.py  test_dynamics.py  test_reversible.py  test_state.py
tests/morpion/: test_action_symmetry.py  test_basic.py  test_canonical.py  test_checkpoints.py  test_rules.py  test_stable_tags.py  test_state.py
tools/: morpion_count_states.py
